@@ -39,8 +39,7 @@ import logging
 from MoinMoin.server.server_wsgi import WsgiConfig, moinmoinApp
 
 class Config(WsgiConfig):
-    logPath = 'moin.log' # adapt this to your needs!
-    #loglevel_file = logging.INFO # adapt if you don't like the default
+    pass
 
 config = Config() # MUST create an instance to init logging!
 
